[text2] Fix text2 control not showing error status.

--- a/to.etc.domui/src/main/resources/resources/themes/scss/winter/_text2.scss
+++ b/to.etc.domui/src/main/resources/resources/themes/scss/winter/_text2.scss
@@ -32,6 +32,10 @@
 		position: relative;
 	}
 
+	&.ui-input-err input {
+		background-color: $errors_input_background;
+	}
+
 	.ui-txt2-bdiv {
 		position: absolute;
 		top: 0;
